--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ajts.androidmads.sqlite2xlDemo">
+    package="com.arunj.dravidianarts.uyirCBE">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -11,19 +11,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity">
+
+        <activity android:name="com.arunj.dravidianarts.uyirCBE.util.SplashActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
+        </activity>
+
+        <activity android:name="com.arunj.dravidianarts.uyirCBE.MainActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
-            android:name=".SQLite2ExcelActivity"
+            android:name="com.arunj.dravidianarts.uyirCBE.SQLite2ExcelActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"/>
         <activity
-            android:name=".Excel2SQLiteActivity"
+            android:name="com.arunj.dravidianarts.uyirCBE.Excel2SQLiteActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"/>
     </application>
