--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.3'
+    compileSdkVersion 28
     defaultConfig {
-        applicationId "com.ajts.androidmads.sqlite2xlDemo"
+        applicationId "com.dravidianarts.userresigistration.uyir"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -19,11 +18,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(path: ':library')
-//    compile 'com.ajts.androidmads.SQLite2Excel:library:1.0.1'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api project(path: ':library')
+    api 'com.android.support:appcompat-v7:28.+'
+    api 'com.android.support:design:28.+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 repositories {
